// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`栅格系统 flex布局 1`] = `
<div>
  <div
    class="grid-row-box grid-row-box--flex"
  >
    <div
      class="xl-row-flex xl-row-flex--top"
      style="margin-left:-5px;margin-right:-5px"
    >
      <div
        class="xl-col xl-col-span-6"
        style="padding-left:5px;padding-right:5px"
      >
        <div
          class="grid-col-box"
        >
          col1
        </div>
      </div>
      <div
        class="xl-col xl-col-span-6"
        style="padding-left:5px;padding-right:5px"
      >
        <div
          class="grid-col-box"
        >
          col2
        </div>
      </div>
      <div
        class="xl-col xl-col-span-6"
        style="padding-left:5px;padding-right:5px"
      >
        <div
          class="grid-col-box"
        >
          col3
        </div>
      </div>
      <div
        class="xl-col xl-col-span-6"
        style="padding-left:5px;padding-right:5px"
      >
        <div
          class="grid-col-box"
        >
          col4
        </div>
      </div>
    </div>
  </div>
  <div
    class="grid-row-box grid-row-box--flex"
  >
    <div
      class="xl-row-flex xl-row-flex--middle"
      style="margin-left:-5px;margin-right:-5px"
    >
      <div
        class="xl-col xl-col-span-6"
        style="padding-left:5px;padding-right:5px"
      >
        <div
          class="grid-col-box"
        >
          col1
        </div>
      </div>
      <div
        class="xl-col xl-col-span-6"
        style="padding-left:5px;padding-right:5px"
      >
        <div
          class="grid-col-box"
        >
          col2
        </div>
      </div>
      <div
        class="xl-col xl-col-span-6"
        style="padding-left:5px;padding-right:5px"
      >
        <div
          class="grid-col-box"
        >
          col3
        </div>
      </div>
      <div
        class="xl-col xl-col-span-6"
        style="padding-left:5px;padding-right:5px"
      >
        <div
          class="grid-col-box"
        >
          col4
        </div>
      </div>
    </div>
  </div>
  <div
    class="grid-row-box grid-row-box--flex"
  >
    <div
      class="xl-row-flex xl-row-flex--bottom"
      style="margin-left:-5px;margin-right:-5px"
    >
      <div
        class="xl-col xl-col-span-6"
        style="padding-left:5px;padding-right:5px"
      >
        <div
          class="grid-col-box"
        >
          col1
        </div>
      </div>
      <div
        class="xl-col xl-col-span-6"
        style="padding-left:5px;padding-right:5px"
      >
        <div
          class="grid-col-box"
        >
          col2
        </div>
      </div>
      <div
        class="xl-col xl-col-span-6"
        style="padding-left:5px;padding-right:5px"
      >
        <div
          class="grid-col-box"
        >
          col3
        </div>
      </div>
      <div
        class="xl-col xl-col-span-6"
        style="padding-left:5px;padding-right:5px"
      >
        <div
          class="grid-col-box"
        >
          col4
        </div>
      </div>
    </div>
  </div>
  <div
    class="grid-row-box grid-row-box--flex"
  >
    <div
      class="xl-row-flex xl-row-flex--start"
      style="margin-left:-5px;margin-right:-5px"
    >
      <div
        class="xl-col xl-col-span-6"
        style="padding-left:5px;padding-right:5px"
      >
        <div
          class="grid-col-box"
        >
          col1
        </div>
      </div>
      <div
        class="xl-col xl-col-span-6"
        style="padding-left:5px;padding-right:5px"
      >
        <div
          class="grid-col-box"
        >
          col2
        </div>
      </div>
      <div
        class="xl-col xl-col-span-6"
        style="padding-left:5px;padding-right:5px"
      >
        <div
          class="grid-col-box"
        >
          col3
        </div>
      </div>
    </div>
  </div>
  <div
    class="grid-row-box grid-row-box--flex"
  >
    <div
      class="xl-row-flex xl-row-flex--center"
      style="margin-left:-5px;margin-right:-5px"
    >
      <div
        class="xl-col xl-col-span-6"
        style="padding-left:5px;padding-right:5px"
      >
        <div
          class="grid-col-box"
        >
          col1
        </div>
      </div>
      <div
        class="xl-col xl-col-span-6"
        style="padding-left:5px;padding-right:5px"
      >
        <div
          class="grid-col-box"
        >
          col2
        </div>
      </div>
      <div
        class="xl-col xl-col-span-6"
        style="padding-left:5px;padding-right:5px"
      >
        <div
          class="grid-col-box"
        >
          col3
        </div>
      </div>
    </div>
  </div>
  <div
    class="grid-row-box grid-row-box--flex"
  >
    <div
      class="xl-row-flex xl-row-flex--end"
      style="margin-left:-5px;margin-right:-5px"
    >
      <div
        class="xl-col xl-col-span-6"
        style="padding-left:5px;padding-right:5px"
      >
        <div
          class="grid-col-box"
        >
          col1
        </div>
      </div>
      <div
        class="xl-col xl-col-span-6"
        style="padding-left:5px;padding-right:5px"
      >
        <div
          class="grid-col-box"
        >
          col2
        </div>
      </div>
      <div
        class="xl-col xl-col-span-6"
        style="padding-left:5px;padding-right:5px"
      >
        <div
          class="grid-col-box"
        >
          col3
        </div>
      </div>
    </div>
  </div>
  <div
    class="grid-row-box grid-row-box--flex"
  >
    <div
      class="xl-row-flex"
      style="margin-left:-5px;margin-right:-5px"
    >
      <div
        class="xl-col xl-col-span-6 xl-col-order-3"
        style="padding-left:5px;padding-right:5px"
      >
        <div
          class="grid-col-box"
        >
          col1
        </div>
      </div>
      <div
        class="xl-col xl-col-span-6 xl-col-order-1"
        style="padding-left:5px;padding-right:5px"
      >
        <div
          class="grid-col-box"
        >
          col2
        </div>
      </div>
      <div
        class="xl-col xl-col-span-6 xl-col-order-2"
        style="padding-left:5px;padding-right:5px"
      >
        <div
          class="grid-col-box"
        >
          col3
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`栅格系统 偏移布局 1`] = `
<div>
  <div
    class="grid-row-box"
  >
    <div
      class="xl-row"
      style="margin-left:-5px;margin-right:-5px"
    >
      <div
        class="xl-col xl-col-span-6"
        style="padding-left:5px;padding-right:5px"
      >
        <div
          class="grid-col-box"
        >
          col1
        </div>
      </div>
      <div
        class="xl-col xl-col-span-6 xl-col-offset-6"
        style="padding-left:5px;padding-right:5px"
      >
        <div
          class="grid-col-box"
        >
          col2
        </div>
      </div>
      <div
        class="xl-col xl-col-span-6"
        style="padding-left:5px;padding-right:5px"
      >
        <div
          class="grid-col-box"
        >
          col3
        </div>
      </div>
    </div>
  </div>
  <div
    class="grid-row-box"
  >
    <div
      class="xl-row"
      style="margin-left:-5px;margin-right:-5px"
    >
      <div
        class="xl-col xl-col-span-6"
        style="padding-left:5px;padding-right:5px"
      >
        <div
          class="grid-col-box"
        >
          col1
        </div>
      </div>
      <div
        class="xl-col xl-col-span-6 xl-col-push-6"
        style="padding-left:5px;padding-right:5px"
      >
        <div
          class="grid-col-box"
        >
          col2
        </div>
      </div>
      <div
        class="xl-col xl-col-span-6 xl-col-pull-6"
        style="padding-left:5px;padding-right:5px"
      >
        <div
          class="grid-col-box"
        >
          col3
        </div>
      </div>
      <div
        class="xl-col xl-col-span-6"
        style="padding-left:5px;padding-right:5px"
      >
        <div
          class="grid-col-box"
        >
          col4
        </div>
      </div>
    </div>
  </div>
  <div
    class="grid-row-box"
  >
    <div
      class="xl-row"
      style="margin-left:-5px;margin-right:-5px"
    >
      <div
        class="xl-col xl-col-span-6 xl-col-offset-6"
        style="padding-left:5px;padding-right:5px"
      >
        <div
          class="grid-col-box"
        >
          col1
        </div>
      </div>
      <div
        class="xl-col xl-col-span-6 xl-col-pull-12"
        style="padding-left:5px;padding-right:5px"
      >
        <div
          class="grid-col-box"
        >
          col2
        </div>
      </div>
      <div
        class="xl-col xl-col-span-6"
        style="padding-left:5px;padding-right:5px"
      >
        <div
          class="grid-col-box"
        >
          col4
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`栅格系统 响应式偏移 1`] = `
<div>
  <div
    class="grid-row-box"
  >
    <div
      class="xl-row"
      style="margin-left:-5px;margin-right:-5px"
    >
      <div
        class="xl-col xl-col-span-6"
        style="padding-left:5px;padding-right:5px"
      >
        <div
          class="grid-col-box"
        >
          col1
        </div>
      </div>
      <div
        class="xl-col xl-col-span-6"
        style="padding-left:5px;padding-right:5px"
      >
        <div
          class="grid-col-box"
        >
          col2
        </div>
      </div>
      <div
        class="xl-col xl-col-span-6"
        style="padding-left:5px;padding-right:5px"
      >
        <div
          class="grid-col-box"
        >
          col3
        </div>
      </div>
    </div>
  </div>
  <div
    class="grid-row-box"
  >
    <div
      class="xl-row"
      style="margin-left:-5px;margin-right:-5px"
    >
      <div
        class="xl-col xl-col-span-6"
        style="padding-left:5px;padding-right:5px"
      >
        <div
          class="grid-col-box"
        >
          col1
        </div>
      </div>
      <div
        class="xl-col xl-col-span-6"
        style="padding-left:5px;padding-right:5px"
      >
        <div
          class="grid-col-box"
        >
          col2
        </div>
      </div>
      <div
        class="xl-col xl-col-span-6"
        style="padding-left:5px;padding-right:5px"
      >
        <div
          class="grid-col-box"
        >
          col3
        </div>
      </div>
    </div>
  </div>
  <div
    class="grid-row-box"
  >
    <div
      class="xl-row"
      style="margin-left:-5px;margin-right:-5px"
    >
      <div
        class="xl-col xl-col-span-6"
        style="padding-left:5px;padding-right:5px"
      >
        <div
          class="grid-col-box"
        >
          col1
        </div>
      </div>
      <div
        class="xl-col xl-col-span-6"
        style="padding-left:5px;padding-right:5px"
      >
        <div
          class="grid-col-box"
        >
          col2
        </div>
      </div>
      <div
        class="xl-col xl-col-span-6 xl-col-offset-6"
        style="padding-left:5px;padding-right:5px"
      >
        <div
          class="grid-col-box"
        >
          col3
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`栅格系统 响应式布局 1`] = `
<div
  class="grid-row-box"
>
  <div
    class="xl-row"
  >
    <div
      class="xl-col"
    >
      <div
        class="grid-col-box"
      >
        col1
      </div>
    </div>
    <div
      class="xl-col"
    >
      <div
        class="grid-col-box"
      >
        col2
      </div>
    </div>
    <div
      class="xl-col"
    >
      <div
        class="grid-col-box"
      >
        col3
      </div>
    </div>
    <div
      class="xl-col"
    >
      <div
        class="grid-col-box"
      >
        col4
      </div>
    </div>
  </div>
</div>
`;

exports[`栅格系统 基本用法 1`] = `
<div>
  <div
    class="grid-row-box"
  >
    <div
      class="xl-row"
      style="margin-left:-5px;margin-right:-5px"
    >
      <div
        class="xl-col xl-col-span-4"
        style="padding-left:5px;padding-right:5px"
      >
        <div
          class="grid-col-box"
        >
          col1
        </div>
      </div>
      <div
        class="xl-col xl-col-span-5"
        style="padding-left:5px;padding-right:5px"
      >
        <div
          class="grid-col-box"
        >
          col2
        </div>
      </div>
      <div
        class="xl-col xl-col-span-7"
        style="padding-left:5px;padding-right:5px"
      >
        <div
          class="grid-col-box"
        >
          col3
        </div>
      </div>
      <div
        class="xl-col xl-col-span-8"
        style="padding-left:5px;padding-right:5px"
      >
        <div
          class="grid-col-box"
        >
          col4
        </div>
      </div>
    </div>
  </div>
  <div
    class="grid-row-box"
  >
    <div
      class="xl-row"
      style="margin-left:-5px;margin-right:-5px"
    >
      <div
        class="xl-col xl-col-span-6"
        style="padding-left:5px;padding-right:5px"
      >
        <div
          class="grid-col-box"
        >
          col1
        </div>
      </div>
      <div
        class="xl-col xl-col-span-6"
        style="padding-left:5px;padding-right:5px"
      >
        <div
          class="grid-col-box"
        >
          col2
        </div>
      </div>
      <div
        class="xl-col xl-col-span-6"
        style="padding-left:5px;padding-right:5px"
      >
        <div
          class="grid-col-box"
        >
          col3
        </div>
      </div>
      <div
        class="xl-col xl-col-span-6"
        style="padding-left:5px;padding-right:5px"
      >
        <div
          class="grid-col-box"
        >
          col4
        </div>
      </div>
    </div>
  </div>
  <div
    class="grid-row-box"
  >
    <div
      class="xl-row"
      style="margin-left:-5px;margin-right:-5px"
    >
      <div
        class="xl-col xl-col-span-8"
        style="padding-left:5px;padding-right:5px"
      >
        <div
          class="grid-col-box"
        >
          col1
        </div>
      </div>
      <div
        class="xl-col xl-col-span-0"
        style="padding-left:5px;padding-right:5px"
      >
        <div
          class="grid-col-box"
        >
          col2
        </div>
      </div>
      <div
        class="xl-col xl-col-span-8"
        style="padding-left:5px;padding-right:5px"
      >
        <div
          class="grid-col-box"
        >
          col3
        </div>
      </div>
      <div
        class="xl-col xl-col-span-8"
        style="padding-left:5px;padding-right:5px"
      >
        <div
          class="grid-col-box"
        >
          col4
        </div>
      </div>
    </div>
  </div>
</div>
`;
